<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jstalin.examenud1hlc.Verifica">

    <TextView
        android:id="@+id/tvInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stInfo2"
        android:textSize="25dp"/>
    <Button
        android:id="@+id/btAcepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stbtAcepto"
        android:onClick="enviarResultado"/>

    <Button
        android:id="@+id/btRechazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stbtRechazo"
        android:onClick="enviarResultado"/>

</LinearLayout>
